# camera

./: README.md  README_barcode_tools.md  aaa.out  apply_best_config.sh  barcode_search.py  barcode_tools_menu.sh  camera_config.yaml  cctag_detector.py  flashlight_analysis_report.html  focal_length_optimizer.py  print_analysis_summary.py  quick_barcode_test.sh  regenerate_grid.py  requirements.txt  run_camera.sh  run_cctag.sh  run_iterate_capture.sh  run_live_tuner.sh  test
binding/: CMakeLists.txt  CMakeLists_binding.txt  cctag_binding.cpp
binding_build/: cctag_binding.cpp
binding_build/build_py310/: CMakeCache.txt  Makefile  cmake_install.cmake
data/focal_analysis/: focal_length_scan_results.csv
data/iterate_capture_20260209_202153/: capture_summary.yaml
docs/: ANALYSIS_REPORT.md  AUTO_SAVE.md  AUTO_SCALE_WINDOW.md
fullrange_scan/: capture_summary.yaml
indoor/mode2/: flir_analysis_20260205_205154.txt  flir_analysis_20260205_205214.txt  flir_analysis_20260205_205224.txt  flir_analysis_20260205_205239.txt  flir_analysis_20260205_205244.txt  flir_analysis_20260205_205249.txt  flir_analysis_20260205_205254.txt  flir_analysis_20260205_205304.txt  flir_meta_20260205_205159.txt  flir_meta_20260205_205204.txt  flir_meta_20260205_205209.txt  (+15 more)
scripts/: apply_best_config.sh  barcode_tools_menu.sh  quick_barcode_test.sh  run_camera.sh  run_cctag.sh  run_iterate_capture.sh  run_live_tuner.sh
src/: analyze_flashlight_static.py  analyze_flashlight_test.py  cctag_detector.py  flir_camera_preview.py  iterate_capture.py  live_barcode_tuner.py  switch_config.py
(+142 files in other folders)
